tests/neg/semantic_variadic_start_anchor_mismatch.baa
// RUN: expect-fail
// EXPECT: المعامل الثاني يجب أن يكون 'عدد'

صحيح اجمع_متغير(صحيح عدد، ...) {
    عدم* قائمة = عدم.
    صحيح آخر = ٠.
    بدء_معاملات(قائمة، آخر).
    إرجع ٠.
}
